WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200821
Many WebStorage classes do not need to subclass ThreadSafeRefCounted
https://bugs.webkit.org/show_bug.cgi?id=200821
Summary
Many WebStorage classes do not need to subclass ThreadSafeRefCounted
Chris Dumez
Reported
2019-08-16 12:40:52 PDT
Many WebStorage classes do not need to subclass ThreadSafeRefCounted. They never get ref'd or deref'd.
Attachments
Patch
(19.40 KB, patch)
2019-08-16 12:47 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-08-16 12:47:59 PDT
Created
attachment 376518
[details]
Patch
Geoffrey Garen
Comment 2
2019-08-16 13:04:39 PDT
Comment on
attachment 376518
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=376518&action=review
r=me
> Source/WebKit/NetworkProcess/WebStorage/LocalStorageNamespace.cpp:54 > + return std::make_unique<StorageArea>(isEphemeral == IsEphemeral::Yes ? nullptr : this, WTFMove(securityOrigin), m_quotaInBytes);
Should be makeUnique (here and elsewhere).
Chris Dumez
Comment 3
2019-08-16 13:06:21 PDT
(In reply to Geoffrey Garen from
comment #2
)
> Comment on
attachment 376518
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=376518&action=review
> > r=me > > > Source/WebKit/NetworkProcess/WebStorage/LocalStorageNamespace.cpp:54 > > + return std::make_unique<StorageArea>(isEphemeral == IsEphemeral::Yes ? nullptr : this, WTFMove(securityOrigin), m_quotaInBytes); > > Should be makeUnique (here and elsewhere).
Again, that makeUnique patch las not landed yet :)
WebKit Commit Bot
Comment 4
2019-08-16 13:43:52 PDT
Comment on
attachment 376518
[details]
Patch Clearing flags on attachment: 376518 Committed
r248792
: <
https://trac.webkit.org/changeset/248792
>
WebKit Commit Bot
Comment 5
2019-08-16 13:43:53 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-08-16 13:44:17 PDT
<
rdar://problem/54405490
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug