Source/WebKit/NetworkProcess/WebStorage/SessionStorageNamespace.cpp
@@ -43,12 +43,12 @@ SessionStorageNamespace::~SessionStorageNamespace()
     ASSERT(!RunLoop::isMain());
 }
 
-Ref<StorageArea> SessionStorageNamespace::getOrCreateStorageArea(SecurityOriginData&& securityOrigin)
+StorageArea& SessionStorageNamespace::getOrCreateStorageArea(SecurityOriginData&& securityOrigin)
 {
     ASSERT(!RunLoop::isMain());
     return *m_storageAreaMap.ensure(securityOrigin, [this, &securityOrigin]() mutable {
-        return StorageArea::create(nullptr, WTFMove(securityOrigin), m_quotaInBytes);
-    }).iterator->value.copyRef();
+        return std::make_unique<StorageArea>(nullptr, WTFMove(securityOrigin), m_quotaInBytes);
+    }).iterator->value.get();
 }
 
 void SessionStorageNamespace::cloneTo(SessionStorageNamespace& newSessionStorageNamespace)
